--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </li>
           </ul>
         </div>
-        <div class="image"><img src="https://gabelanz.github.io/images/TicketCounter.JPG" alt="" /></div>
+        <div class="image"><img src="images/TicketCounter.JPG" alt="" /></div>
       </section>
 
       <!-- Three -->
