--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <li><a href="https://github.com/GabeLanz/Java-password-validator" class="button">GitHub</a></li>
           </ul>
         </div>
-        <div class="image"><img src="images/PasswordValidator.jpg" alt="" /></div>
+        <div class="image"><img src="images/PasswordValidator.JPG" alt="" /></div>
       </section>
 
       <!-- Four -->
