--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <li><a href="https://github.com/GabeLanz/Java-random-number-generator" class="button">GitHub</a></li>
           </ul>
         </div>
-         <div class="image"><img src="images/RandomNumberGenerator.jpg" alt="" /></div>
+         <div class="image"><img src="images/RandomNumberGenerator.JPG" alt="" /></div>
       </section>
 
       <!-- Six -->
