--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <p class="major">
             Hi there, I am Gabe Lanz.  I'm a recent Cybersecurity graduate, and I am actively seeking opportunities to get my feet wet in the
             industry.  I have a strong educational background in Networking, Routing and Switching, and am open to Network Administration types of opportunities too.
-            My strengths lie configuring networks, network and computer security, and working through problems till they're solved.
+            My strengths lie in configuring networks, network and computer security, and working through problems till they're solved.
           </p>
           <ul class="actions stacked">
             <li>
