--- a/index.html
+++ b/index.html
@@ -136,18 +136,21 @@
       </section>
 
       <!-- Seven -->
+      <?php include('form_process.php'); ?>
       <section class="wrapper style1 align-center">
         <div class="inner medium">
           <h2>Get in touch</h2>
-          <form method="post" action="#">
+          <form method="post" action= "<?= $_SERVER['PHP_SELF']; ?">
             <div class="fields">
               <div class="field half">
                 <label for="name">Name</label>
-                <input type="text" name="name" id="name" value="" />
+                <input type="text" name="name" id="name" value="" autofocus />
+                <span class="error"><?= $name_error ?></span>
               </div>
               <div class="field half">
                 <label for="email">Email</label>
                 <input type="email" name="email" id="email" value="" />
+                <span class="error"><?= $email_error ?></span>
               </div>
               <div class="field">
                 <label for="message">Message</label>
