--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       <section class="wrapper style1 align-center">
         <div class="inner medium">
           <h2>Get in touch</h2>
-          <form method="post" action= "<?= $_SERVER['PHP_SELF']; ?">
+          <form method="post" action="https://formspree.io/gabelanz1@gmail.com" method="POST" />
             <div class="fields">
               <div class="field half">
                 <label for="name">Name</label>
